src/snapshots/jsonschema_annotator__tests__annotate_with_refs.snap
---
source: src/lib.rs
expression: result
---
# Port
# A network port number
http_port = 80
# Port
# A network port number
https_port = 443
