src/snapshots/jsonschema_annotator__tests__annotate_yaml.snap
---
source: src/lib.rs
expression: result
---
# Server
# Server configuration
server:
  # Port
  # The port to listen on
  port: 8080
